# quantum26

./: README.md  app.py  pyproject.toml  requirements.txt
data/: .gitkeep
experiments/: __init__.py  plot_results.py  run_experiments.py
models/: __init__.py  classical_models.py  quantum_kernel_svm.py  vqc_model.py
results/: .gitkeep  experiment_results.csv
results/saved_models/: classical_svm.joblib  pipeline.joblib  quantum_svm.joblib
tests/: conftest.py  test_classical_models.py  test_data_pipeline.py  test_feature_engineering.py  test_quantum_kernel_svm.py  test_vqc_model.py
utils/: __init__.py  data_pipeline.py  feature_engineering.py
