[project]
name = "quantum-sarcasm-detector"
version = "0.1.0"
description = "Hybrid Quantum-Classical Sarcasm Detector using PennyLane VQC and Quantum Kernel SVM"
requires-python = ">=3.12"
dependencies = [
    "pennylane>=0.44.0",
    "pennylane-lightning>=0.44.0",
    "scikit-learn>=1.5.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "pandas>=2.2.2",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.40.0",
    "nltk>=3.8.1",
    "tqdm>=4.66.4",
    "joblib>=1.4.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests that invoke PennyLane quantum circuits (deselect with '-m not slow')",
]
addopts = "-ra -q"
log_cli = false

[tool.hatch.build.targets.wheel]
packages = ["models", "utils", "experiments"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
